<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeActivity">

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:text="@string/action_logout"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerGeneralInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_24dp"
        android:paddingStart="@dimen/dimen_24dp"
        android:paddingEnd="@dimen/dimen_72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogout">

        <TextView
            android:id="@+id/tvBalanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_balance"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBalanceTitle"
            tools:text="SGD 21,421.33" />

        <TextView
            android:id="@+id/tvAccountNumTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="@string/label_account_num"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBalance" />

        <TextView
            android:id="@+id/tvAccountNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAccountNumTitle"
            tools:text="3213-321-9923" />

        <TextView
            android:id="@+id/tvAccountHolderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="@string/label_account_holder"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAccountNum" />

        <TextView
            android:id="@+id/tvAccountHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAccountHolderTitle"
            tools:text="Donald Trump" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvTransactionHistoruTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:text="@string/label_transaction_history"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerGeneralInfo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransactionHistoru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTransactionHistoruTitle" />

    <Button
        android:id="@+id/btnToTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:text="@string/action_direct_to_transfer"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>